// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AnswerTypeSelector should render content when open 1`] = `
<Popout
  onEntered={[Function]}
  onToggleOpen={[Function]}
  open={true}
  transition={[Function]}
  trigger={
    <IconButton
      clear={true}
      highlightOnHover={true}
      icon="icon-add.svg"
      iconOnly={false}
      id="add-answer-button"
    >
      Add 
      an
       answer
    </IconButton>
  }
>
  <AnswerTypeGrid
    onSelect={[Function]}
  />
</Popout>
`;

exports[`components/AnswerTypeSelector should say to add 'another' answer if > 0 answers currently 1`] = `
<Popout
  onEntered={[Function]}
  onToggleOpen={[Function]}
  open={false}
  transition={[Function]}
  trigger={
    <IconButton
      clear={true}
      highlightOnHover={true}
      icon="icon-add.svg"
      iconOnly={false}
      id="add-answer-button"
    >
      Add 
      another
       answer
    </IconButton>
  }
>
  <AnswerTypeGrid
    onSelect={[Function]}
  />
</Popout>
`;

exports[`components/AnswerTypeSelector shouldn't render content when closed 1`] = `
<Popout
  onEntered={[Function]}
  onToggleOpen={[Function]}
  open={false}
  transition={[Function]}
  trigger={
    <IconButton
      clear={true}
      highlightOnHover={true}
      icon="icon-add.svg"
      iconOnly={false}
      id="add-answer-button"
    >
      Add 
      an
       answer
    </IconButton>
  }
>
  <AnswerTypeGrid
    onSelect={[Function]}
  />
</Popout>
`;
